--- a/.env
+++ b/.env
@@ -4,4 +4,15 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://elitevetcare:123456@localhost:5435/EliteVetCare_db?schema=public"
+DATABASE_URL="postgresql://elitevetcare_db_user:EuYSoncLRTTYnaovk8YQ1qTFmABYGd0S@dpg-ckfukv8l3its73a9ntcg-a.singapore-postgres.render.com:5432/elitevetcare_db?schema=public"
+
+JWT_SECRET="shfjksdhfjkshlasdkjaldh"
+
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=quangquoc154@gmail.com
+MAIL_PASSWORD=lvdtygkfqrjhlbng
+MAIL_FROM=${MAIL_USER}
+MAIL_TRANSPORT=smtp://${MAIL_USER}:${MAIL_PASSWORD}@${MAIL_HOST}
+
+GOOGLE_CLIENT_ID=843677392186-skpu6nkae5vf9uq38eul4i0h5eubuhlj.apps.googleusercontent.com
+GOOGLE_SECRET=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
