--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.8'
 services:
-  EliteVetCare_db:
+  elitevetcare_db:
     image: postgres:13
     ports:
       - 5435:5432
     environment:
       POSTGRES_USER: elitevetcare
       POSTGRES_PASSWORD: 123456
-      POSTGRES_DB: EliteVetCare_db
+      POSTGRES_DB: elitevetcare_db
     networks:
       - qq-network
 networks:
