--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "npm run build && npx typeorm -d dist/database/data-source.js",
+    "typeorm": "npm run build && npx typeorm -d dist/db/data-source.js",
     "migration:generate": "npm run typeorm -- migration:generate",
     "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "migration:revert": "npm run typeorm -- migration:revert",
+    "seed": "ts-node ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d dist/db/data-source.js"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^1.9.1",
@@ -37,11 +35,11 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
-    "@prisma/client": "^5.3.1",
     "argon2": "^0.31.1",
     "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.0",
     "crypto": "^1.0.1",
     "hbs": "^4.2.0",
     "nodemailer": "^6.9.5",
@@ -50,6 +48,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1",
     "typeorm": "^0.3.17",
     "typeorm-extension": "^3.1.1"
   },
@@ -59,6 +58,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.3",
     "@types/passport-google-oauth20": "^2.0.12",
     "@types/passport-jwt": "^3.0.10",
